-------------------------------------------------------------------------------
Changes in version 1.010

- Added a getpeereid sysdep function.

- Added some small optimizations to the SHA-256/512 code and fixed a
  one-off bug.

- Added some major optimizations to the SHA-1 update/final code.

- Removed the cvm libraries.

- All the CRC tables are now generated at build time.

- Split the case insensitive parts of the str_glob and str_match
  functions into str_case_glob and str_case_match respectively.

- wrap_* functions can now exit with a customized error code.

- Added str_start functions.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.009

- Rewrite the SHA-256 and SHA-512 algorithms to make them work on both
  64-bit and MSB platforms, and added the SHA-384 algorithm.

- Fixed iobuf/iobuf_init.c for systems that lack anonymous mmap.

- Turn off recv/sendfd if the appropriate defines are missing.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.008

- Added queue and stack ADT's.

- Added globbing function to the str library.

- Changed str_match functions to add case insensitivity.

- Added "function" options, and option separators to the CLI library, as
  well as enhancing the string list type.

- More portability fixes.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.007

- Fixed bug in iobuf/iobuf_init.c -- parameters to mmap happened to work
  on Linux but were completely bogus for portability.
