@@ -1,0 +1,7 @@
+#ifndef BGLIBS__SELF_PIPE__H__
+#define BGLIBS__SELF_PIPE__H__
+
+int selfpipe_init(void);
+void selfpipe_close(void);
+
+#endif
